tests/rosetta/out/C/atomic-updates.error
cc: exit status 1
/tmp/atomic-updates.c: In function ‘mochi_main’:
/tmp/atomic-updates.c:141:24: error: incompatible type for argument 1 of ‘_str’
  141 |     char *tmp16 = _str(buckets);
      |                        ^~~~~~~
      |                        |
      |                        list_int
/tmp/atomic-updates.c:38:23: note: expected ‘int’ but argument is of type ‘list_int’
   38 | static char *_str(int v) {
      |                   ~~~~^
/tmp/atomic-updates.c:154:24: error: incompatible type for argument 1 of ‘_str’
  154 |     char *tmp29 = _str(buckets);
      |                        ^~~~~~~
      |                        |
      |                        list_int
/tmp/atomic-updates.c:38:23: note: expected ‘int’ but argument is of type ‘list_int’
   38 | static char *_str(int v) {
      |                   ~~~~^
/tmp/atomic-updates.c:156:14: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘char *’ [-Wformat=]
  156 |     printf("%d\n", tmp30);
      |             ~^     ~~~~~
      |              |     |
      |              int   char *
      |             %s
